Fixed x too low on project cards when small

--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,7 @@ small {
   }
   i.mdi-navigation-close.right {
     position: relative;
-    bottom: 35px;
+    /* bottom: 35px; pushes 'x' up in card when small*/
   }
   #contact a:not(.btn-floating) {
     text-align: center;
